--- a/ReportAll/LowReport.rdlc
+++ b/ReportAll/LowReport.rdlc
@@ -330,7 +330,9 @@
                                   <Style />
                                 </TextRun>
                               </TextRuns>
-                              <Style />
+                              <Style>
+                                <TextAlign>Right</TextAlign>
+                              </Style>
                             </Paragraph>
                           </Paragraphs>
                           <rd:DefaultName>ProductAmount</rd:DefaultName>
